fix: remove scrollbar jumping bug

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+  overflow: overlay;
+}
 
 html,
 body {
   margin: 1rem 1rem 0rem 1rem;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
-
 h1,
 h2 {
   margin: 0;
